--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "String","API_KEY","\"NNKOjkoul8n1CH18TWA9gwngW1s1SmjESPjNoUFo\""
     }
 
     buildTypes {
