--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.APOD">
         <activity
-            android:name=".ui.activity.MainActivity"
+            android:name=".ui.activity.ApodActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.APOD.NoActionBar">
